--- a/wa.config.json
+++ b/wa.config.json
@@ -5,7 +5,7 @@
     },
     "autoSend": [
         {
-            "time": "12:58",
+            "time": "14:00",
             "message": "Test",
             "no": "+6287738210702"
         },
@@ -20,7 +20,7 @@
             "no": "+6287738210702"
         },
         {
-            "time": "12:59",
+            "time": "18:00-19:00",
             "message": ["Good evening", "How are you?", "Don't forget to get dinner"],
             "no": "+6287738210702"
         }
