--- a/wa.config.json
+++ b/wa.config.json
@@ -5,6 +5,12 @@
     },
     "autoSend": [
         {
+            "date": "2 Oct",
+            "time": "22:10",
+            "message": "Rek rek rek, ada yang ulang tahun lo 🥳🎉🎊, siapa ya ? 👀",
+            "group": "120363044459245702"
+        },
+        {
             "date": "03 Oct",
             "time": "16:30-16:40",
             "message": "Test",
