--- a/wa.config.json
+++ b/wa.config.json
@@ -6,8 +6,9 @@
     "autoSend": [
         {
             "date": "4 Oct",
-            "time": "13:00",
-            "message": "For the last time, I am sorry miss, because my master made that message on his office 😅\nSo now, I will reintroduce myself again\nHello, miss. I am a bot, my name is Erieri.\nNice to meet you. I am here to help you.\nMy first mission that has given to me from my master is to remind you to have  3 meals/day\nHe said you are human, not like me. So you need to eat well.\nThank you miss. That's it. Have nice day"
+            "time": "14:00",
+            "message": "For the last time, I am sorry miss, because my master made that message on his office 😅\nSo now, I will reintroduce myself again\nHello, miss. I am a bot, my name is Erieri.\nNice to meet you. I am here to help you.\nMy first mission that has given to me from my master is to remind you to have  3 meals/day\nHe said you are human, not like me. So you need to eat well.\nThank you miss. That's it. Have nice day",
+            "no": "+6282301027618"
         },
         {
             "time": "07:00",
