--- a/wa.config.json
+++ b/wa.config.json
@@ -44,9 +44,9 @@
                 "Tunda lapar, makan indomie hati menggelepar cintapun bersemi.\n~Erieri",
                 "Motivator dan pembicara tak dapat membuatku rajin bekerja. Hanya cicilan dan tagihan yang mampu.\n~Erieri",
                 "Manusia boleh berencana, tapi saldo juga yang menentukan.\n~Erieri",
-                "Jika seseorang melemparmu dengan batu, balaslah dengan bunga sekalian dengan potnya.\nErieri",
-                "Hidup itu seperti sebuah acara televisi yang sangat panjang tanpa remote control.\nErieri",
-                "Aku tidak suka kekerasan. Tapi tidak masalah kalau aku dipukul dengan keberuntungan.\nErieri"
+                "Jika seseorang melemparmu dengan batu, balaslah dengan bunga sekalian dengan potnya.\n~Erieri",
+                "Hidup itu seperti sebuah acara televisi yang sangat panjang tanpa remote control.\n~Erieri",
+                "Aku tidak suka kekerasan. Tapi tidak masalah kalau aku dipukul dengan keberuntungan.\n~Erieri"
             ],
             "group": "6281235190914-1462187599"
         }
